--- a/files/etc/init/scollector.conf
+++ b/files/etc/init/scollector.conf
@@ -11,9 +11,9 @@ stop on runlevel [!2345]
 respawn
 respawn limit 10 5
 
-env TZ=Europe/Berlin
+env TZ=America/Los_Angeles
 env LOGFILE=/var/log/scollector.log
-env CONFFILE=/etc/bosun/scollector.conf
+env CONFFILE=/etc/scollector/scollector.conf
 
 pre-start script
     echo "Upstart starting scollector $(date)" >> ${LOGFILE}
