--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,12 @@
 ---
 galaxy_info:
-  author: Lukas Pustina
+  author: Vincent Flesouras
   description: Installs Bosun Agent
   license: GPL
   min_ansible_version: 1.9
   platforms:
     - name: Ubuntu
+    - name: EL
   galaxy_tags:
     - ops
     - installer
